--- a/pages/p5/955515.md
+++ b/pages/p5/955515.md
@@ -1,4 +1,4 @@
-### 华为250亿卖荣耀？“烫手山芋”背后风险巨大(图)
+### 中共政治局研究2021年经济 聚焦金融和房地产(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="华为 荣耀 风险" src="https://img3.secretchina.com/pic/2020/9-14/p2775612a299442409-ss.jpg"/>
+  <img alt="中共政治局 经济 金融 房地产" src="https://img3.secretchina.com/pic/2020/7-12/p2730312a623981027-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   传华为要以最高250亿元出售荣耀，“烫手山芋”的背后风险巨大。（图片来源：Adobe Stock）
+   中共政治局研究2021年经济，聚焦金融和房地产。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,64 +21,149 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月16日讯】（看中国记者丁晓雨综合报导）近期，
+  【看中国2020年12月12日讯】（看中国记者李正鑫综合报导）12月11日，
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  主持
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-    华为
-   </span>
+   中共政治局
   </strong>
-  屡屡传出要出售
+  会议，研究2021年
   <strong>
-   荣耀
+   经济
   </strong>
-  的消息。尽管华为与传闻中的竞购者双方都予以否认，有分析师认为，出售荣耀，让其脱离华为体系从而摆脱禁令限制，是华为寻求自救的唯一途径。但由于荣耀与华为无法撇清的关系，收购方或将面临与华为一样被禁的
+  ，聚焦
   <strong>
-   风险
+   金融
   </strong>
-  。
+  和
+  <strong>
+   房地
+  </strong>
+  产。中国财政部部长同天发布的文章也称要推动金融、房地产同实体经济均衡发展。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《中国企业家》杂志报导，10月14日，有消息曝出，华为正与神州数码及其他竞购者进行洽谈，商讨以最高人民币250亿元（约合37亿美元）的交易金额，出售部分
-  <span href="https://www.secretchina.com/news/gb/tag/荣耀" target="_blank">
-   荣耀
+  中国官媒《新华社》12月11日报道，
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%AD%E5%85%B1%E6%94%BF%E6%B2%BB%E5%B1%80" target="_blank">
+   中共政治局
   </span>
-  智能手机业务。其他潜在买家包括TCL和小米。
- </p>
- <p>
-  相关知情人士在报导中表示，此交易可能是现金交易，计划出售的资产尚未确定，但可能包括
-  <span href="https://zh.wikipedia.org/wiki/荣耀" target="_blank">
-   荣耀
+  召开会议，分析研究2021年
+  <span href="https://zh.wikipedia.org/zh-cn/%E7%BB%8F%E6%B5%8E" target="_blank">
+   经济
   </span>
-  的品牌、研发能力和相关的供应链管理业务。
+  工作；听取中央纪委国家监委工作汇报；审议《中国共产党地方组织选举工作条例》。中共中央总书记习近平主持会议。
  </p>
  <p>
-  报导称，消息传出后，神州数码股票10月14日涨幅一度超过10%。但荣耀、神州数码及小米等企业，均对此报道未予置评。TCL则对外回复称是不实传闻。
-  <span href="https://zh.wikipedia.org/wiki/华为" target="_blank">
-   华为
+  会议提出，疫情和外部环境仍存在诸多不确定性，继续做好“六稳”工作、落实“六保”任务；要扭住供给侧结构性改革，同时注重需求侧改革；增强产业链供应链自主可控能力，形成强大国内市场；强化反垄断和防止资本无序扩张，促进
+  <span href="https://www.secretchina.com/news/gb/tag/房地产" target="_blank">
+   房地产
   </span>
-  方面则有多位内部人士对外表示消息不实，集团官方目前并没有发布公开口径。
+  市场平稳健康发展；要抓好各种存量风险化解和增量风险防范。
  </p>
  <p>
-  虽然并未有官宣，但分析师指出，出售荣耀的传闻并非空穴来风，此事在逻辑上存在一定的合理性。荣耀与华为师出同门，在芯片、算法、操作系统，甚至到通信、材料及终端应用上，与华为都是共享的。
+  中国经济已经连年下滑，此前在2018年7月，中共政治局会议提出应对经济下滑的对策--“六稳”，指的是稳就业、稳
+  <span href="https://zh.wikipedia.org/zh-cn/%E9%87%91%E8%9E%8D" target="_blank">
+   金融
+  </span>
+  、稳外贸、稳外资、稳投资、稳预期。
  </p>
  <p>
-  《
+  今年4月17日召开的
+  <span href="https://www.secretchina.com/news/gb/tag/中共政治局" target="_blank">
+   中共政治局
+  </span>
+  会议提出，保居民就业、保基本民生、保市场主体、保粮食能源安全、保产业链供应链稳定、保基层运转这“六保”。
+ </p>
+ <p>
+  12月11日，中共中央党校主办的《学习时报》刊发了中国财政部部长刘昆的文章。文章称，支持缓解中小微企业融资难融资贵问题，完善住房市场体系和住房保障体系，推动金融、
+  <span href="https://zh.wikipedia.org/zh-cn/%E6%88%BF%E5%9C%B0%E4%BA%A7" target="_blank">
+   房地产
+  </span>
+  同实体经济均衡发展。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  12月3日，据《新华社》报道，韩正在住房城乡建设部会议上表示，落实房地产长效机制，谋划好“十四五”时期住房工作，坚持因城施策、一城一策，加强房地产
+  <span href="https://www.secretchina.com/news/gb/tag/金融" target="_blank">
+   金融
+  </span>
+  调控。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  韩正说，“要牢牢坚持房子是用来住的、不是用来炒的定位，不把房地产作为短期刺激
+  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
+   经济
+  </span>
+  的手段，时刻绷紧房地产市场调控这根弦。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这是7月24日后，韩正召开的第二次房地产相关工作会议。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  企业家》报导称，市场调研机构Canalys的分析师表示，出售荣耀，让其脱离华为体系从而有可能摆脱禁令限制，未必不是一条自救途径。
+  银保监会主席郭树清日前发表文章《完善现代金融监管体系》强调，坚决抑制房地产泡沫，房地产与金融业深度关联。目前，中国房地产相关贷款占银行业贷款的39%，还有大量债券、股本、信托等资金进入房地产行业。可以说，房地产是现阶段中国金融风险方面最大的“灰犀牛”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +178,7 @@
   </div>
  </center>
  <p>
-  荣耀产品线诞生于2011年9月。2013年12月，开始独立运营，2018年在中国手机市场超越了小米，位列第三。
+  由此可见，北京当局的经济工作在2021年也将围绕金融和房地产展开。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,37 +193,7 @@
   </div>
  </center>
  <p>
-  2019年4月2日，华为消费者业务CEO余承东曾在微博上号称荣耀要做到“中国前二，全球前四”。但美国一纸芯片禁令，荣耀也走到了生死尽头。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  据《中国企业家》报导，多位华为经销商表示，华为将面临一轮优胜劣汰，保大城市大客户、放小城市小客户是华为的选择。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  由于芯片囤货有限，华为正在优先保证下一代旗舰Mate 40系列的供货，中低端机型和荣耀品牌的重要性降低。
+  近期，不只是官员就房地产存在的问题频频表态，研究机构的报告也显示出楼市将发生变化。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,7 +212,7 @@
   </ins>
  </center>
  <p>
-  分析师认为，荣耀留在华为内部，能分配到的量已经越来越少。但如果荣耀进入新公司，或许将不再受到美国禁令限制，采购芯片等元器件成为可能，华为还能拿到一笔相对可观的资金，这对急需储备金的华为实在是很需要。
+  12月1日，中国社会科学院财经战略研究院住房大数据项目组发布的《中国住房大数据分析报告(2020)——城市房价预警与房企品牌价值测度》认为，各城市房地产市场的差异化将成为常态。疫情的出现，加速了房地产市场大分化时代的来临。在大分化时代，单纯宏观分析工具难以有效判断区域房地产市场走势，房价局部大涨大跌风险将成为防范房地产市场风险的重点，“房价只涨不跌的时代已经过去。局部房价下跌监测预警，将成为市场监测预警的重要方面。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,11 +227,7 @@
   </div>
  </center>
  <p>
-  有通讯行业分析师表示，在当前复杂的形势下，卖与不卖都存在变数，“怎么卖”也是问题，其背后存在较大的
-  <span href="https://www.secretchina.com/news/gb/tag/风险" target="_blank">
-   风险
-  </span>
-  性。
+  据《华尔街日报》报道，越来越多有关中国房地产市场的长期研究表明，中国房地产泡沫问题确实是个大问题。房地产过热，造成资本配置不当。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,7 +242,7 @@
   </div>
  </center>
  <p>
-  如果出售给中国公司，美国是否会承认荣耀与华为之间的独立关系？美国一旦不承认荣耀完全独立，或者认为其与华为藕断丝连，未来荣耀在芯片采购上不一定能绕开美国管制。荣耀的生杀大权与华为一样，还是掌握在美国政府手里。如果买方整体收购荣耀，可能也需要承担与华为一样的高风险。谁敢在这个时候，捡块烫手山芋？
+  中国房地产市场发展始于1998年，在2003年房地产市场被官方视“国民经济支柱产业”后，房地产市场发展加速，房屋贷款规模和房价都开始上涨。在2008年金融危机后，政府大幅降低利率，同时鼓励贷款购房，房贷规模和房价加速飙升。在2010年至2014年底，贷款增速和价格增速都得到一定抑制，但2015年房贷再度和房价再度高涨。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,7 +257,7 @@
   </div>
  </center>
  <p>
-  从华为的角度分析，即使出售荣耀，也是杯水车薪，无法解决华为手机面临的根本问题——芯片断供。
+  银行业是中国金融系统的核心，但现在银行业已经牢牢和房地产绑定在一起。一旦房价出现较大幅度的调整，将会给中国金融安全带来严重冲击。房地产市场吸收了金融业的大部分流动性资本，这是中国金融安全的主要风险所在。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -270,13 +321,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949462.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949462.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949462.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/16/949462.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955515.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955515.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955515.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/12/955515.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949462.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/955515.md' width='0px' height='0px'/>
