--- a/pages/p2/955506.md
+++ b/pages/p2/955506.md
@@ -1,4 +1,4 @@
-### 丢车保帅？这张照片泄露了周恩来内心诡秘(图)
+### 他和胡锦涛一起微笑 背后捅了一刀(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）" src="https://img2.secretchina.com/pic/2019/10-31/p2552801a305236912-ss.jpg" style="height:338px; width:600px"/>
+  <img alt="王兆国" src="https://img2.secretchina.com/pic/2017/9-12/p1983641a19509363-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）
+   王兆国（图片来源: Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,61 +29,57 @@
   </div>
  </div>
  <p>
-  1955年4月11日，
+  【看中国2020年12月12日讯】(看中国记者晏清流综合报导）近日网络上流传的一张早年原政治局委员、人大副委员长
   <strong>
-   万隆会议
-  </strong>
-  前夕，“
-  <strong>
-   克什米尔公主号
-  </strong>
-  ”飞机爆炸案曾震惊国际。随后真相不断披露，时任中共总理
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/周恩来" target="_blank">
-    周恩来
+   <span href="https://www.secretchina.com/news/gb/tag/王兆国" target="_blank">
+    王兆国
    </span>
   </strong>
-  预先已知道这起针对他的暗杀行动，但周为了自保和迷惑对手，临时改变路线却让其他人作了替死鬼。
+  与前中共总书记
+  <strong>
+   胡锦涛
+  </strong>
+  一起微笑的照片。据传闻，在2002年，王兆国曾在背后又“捅了”胡锦涛一刀，令胡锦涛大为意外。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
- <p>
-  网络曾曝光一张当时周恩来改变路线后于1955年4月16日上午抵达新加坡加冷机场的罕见照片，照片中周恩来诡异的眼神或泄露其当时的诡秘内心世界。从照片上看，周恩来和许多随行人员在一起，大家都目视前方，行色匆匆，唯有周恩来微仰着头，向天空张望，目光诡异。
- </p>
- <p>
-  此前4月11日，周恩来原计划乘坐的“
-  <span href="https://www.secretchina.com/news/gb/tag/克什米尔公主号" target="_blank">
-   克什米尔公主号
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   那些年，原政治局委员、人大副委员长王兆国与前中共总书记胡锦涛一起微笑。
+   <span href="https://t.co/DruExCym3k">
+    pic.twitter.com/DruExCym3k
+   </span>
+  </p>
+  — 陈塘关 (@Bc09KaxQRHyekvR)
+  <span href="https://twitter.com/Bc09KaxQRHyekvR/status/1337418139550674944?ref_src=twsrc%5Etfw">
+   December 11, 2020
   </span>
-  ”飞机爆炸，机上有11人无辜遇难，而预先知悉暗杀计划的周恩来则金蝉脱壳。
+ </blockquote>
+ <p>
+  1941年生的
+  <span href="https://zh.wikipedia.org/wiki/%E7%8E%8B%E5%85%86%E5%9B%BD" target="_blank">
+   王兆国
+  </span>
+  是河北丰润人，中共第十二至十七届中央委员会委员，第十六届、十七届中央政治局委员；前后在中共中央高层任职20多年，历经胡耀邦、赵紫阳、江泽民、胡锦涛等四任总书记。在中共十二届五中全会上，以44岁的年纪被增补为中央书记处书记，曾一度被视为是未来中共最高领导职务的接班人。
  </p>
  <p>
-  <strong>
-   掌握情报“克什米尔公主号”有炸弹
-  </strong>
+  在中共所谓改革开放初期，因中共人事政策的调整，年轻、懂专业技术的王兆国很快被提拔为第二汽车制造厂副厂长、兼党委书记。1980年，当邓小平到“二汽”视察时，该厂的主要负责干部特别强调了当年王兆国。在受到邓小平的赏识后，王兆国被拔擢速度更快了。在1982年9月召开的中共十二大上，41岁的王兆国当选为中央委员会委员，成为当时最年轻的中央委员；两个月后，出任省部级正职的共青团中央书记处第一书记、兼中央团校校长；1984年，转任中共中央办公厅主任。在这期间，
+  <span href="https://www.secretchina.com/news/gb/tag/胡锦涛" target="_blank">
+   胡锦涛
+  </span>
+  、温家宝都曾先后做他的副手。
  </p>
  <p>
-  综合多方报导，1955年4月18日至24日，第一次亚非会议在印度尼西亚的万隆举行。周恩来为中国代表团团长，并租用印度航空公司的“克什米尔公主号”客机，率团取道香港前往万隆。
+  在任职中共中央办公厅主任时，王兆国受到了胡耀邦、乔石等人的欣赏。在1985年9月召开的中共十二届五中全会上，以44岁的年龄和乔石、田纪云、李鹏、郝建秀等一同被任命为中央书记处书记，成为
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  共产党的高级领导人；也因此，王兆国曾一度被视为未来中共党务工作的理想接班人选。
  </p>
  <p>
-  4月3日，中共接到密报，国民党特务机关已获悉中共代表团行踪，可能采取行动。9日晚，进一步情报称，代表团所乘飞机将遭破坏，飞机上备有定时炸弹。周恩来立即要求通过外交渠道向英国政府交涉。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  10日上午，中共外交部紧急约见英国驻华代办处参赞艾惕恩，告知这一消息。新华社香港分社9日晚即将这一情况正式通知港英当局，还在11日两次约见印度航空公司驻香港分公司经理。该经理表示一定严加防范，不让任何外人接近飞机。
+  但王兆国这名曾被邓小平视作一号接班人来培养和提拔的人，却因对胡耀邦落井下石，最终被邓小平抛弃，反让王当时的下属、作为政治备胎的二号接班人胡锦涛顺利上位。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +94,7 @@
   </div>
  </center>
  <p>
-  在当年四月十一日“克什米尔公主号”出事前八天，中共就掌握了“克什米尔公主号”客机将被炸毁的情报。
+  据悉，王兆国本是邓小平视察时发现的一个“人才”，立刻坐火箭上了中央，人们看他是个接班人的料儿，结果发现是个落井下石的玩意儿，大家都对他不感兴趣了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +109,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   照常起飞中途爆炸坠海导致11人遇难
-  </strong>
+  王兆国仕途转折，政治走下坡路与1987年胡耀邦下台有关。据说王兆国当时站出来批其政治恩人胡耀邦的“问题”。当中共元老陈云看到王兆国在政治局扩大会议上批胡耀邦的发言记录后，“摇了摇头”，提笔批示：“小平同志暨中央常委：此人不适合高层政治生活，建议到基层锻练。”邓小平立即跟着批示：“同意陈云同志意见，找一个好一些的（地方）让他去。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +124,7 @@
   </div>
  </center>
  <p>
-  4月11日上午，“克什米尔公主号”准时到达北京，接载中共代表团和三名外国记者，当时人们并不知道周恩来不在飞机上。12时15分，“克什米尔公主号”抵达香港启德机场，休息加油后飞印尼的万隆。
+  1987年，因中共中央总书记胡耀邦下台，团派力量被分派到各地。王兆国被外放到福建省担任省长，离开了中央权力核心。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +139,7 @@
   </div>
  </center>
  <p>
-  下午6时30分，机舱内突然发出爆炸声，随即多处起火。机长决定强行降落，并用无线电发出三次求救信号。雅加达机场得知周恩来不在机上，信号中断。伴随着一声巨大的爆炸声，飞机坠入大海，炸成几段。除三名机组人员奇迹生还，机上其余11人全部遇难。
+  三年后（1990年11月），王兆国被调回北京，出任国台办主任。1992年，中共十四大后，王兆国被安排出任中共中央统战部部长；并在次年3月的全国政协选举中，当选第八届全国政协副主席，重新回到了“党和国家领导人”的位置上来。1998年，王兆国连任了第九届全国政协副主席，排名上升到第三位。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,9 +154,26 @@
   </div>
  </center>
  <p>
-  <strong>
-   全身而退 周恩来“丢卒保车金蝉脱壳”
-  </strong>
+  2002年11月，在中共十六届一中全会上，王昔日的副手们——胡锦涛、温家宝等人，纷纷晋升中央政治局常委；然而，王兆国才刚刚进入中央政治局。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  曾任职共青团中央书记处第一书记的王兆国在仕途渺茫、极度失望时又被
+  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
+   江泽民
+  </span>
+  相中，最终投入江的怀抱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,7 +192,7 @@
   </ins>
  </center>
  <p>
-  “克什米尔公主号”事件的目标直指周恩来，但周恩来却临时改变了路线，金蝉脱壳，从昆明取道仰光到达雅加达。
+  2002年12月27日至28日，在京召开的中华全国总工会十三届五次执委会议上，为达到顺利镇压工人运动的目的，江泽民赏赐给王兆国“中华全国总工会主席”之职，取消了原政治局常委尉健行在这部份的权力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +207,7 @@
   </div>
  </center>
  <p>
-  4月7日，周恩来和陈毅率代表团从北京乘伊尔——14飞机首先飞昆明。4月14日清晨7时15分，周恩来一行26人乘坐从印度航空公司租借的另一架专机“空中霸王号”自昆明起飞，前往仰光。当地时间上午10点30分，“空中霸王号”降落在仰光机场。
+  王兆国因此对江泽民“感恩戴德”，利用各种机会为江泽民脸上“贴金”。比如，王在中国工会第十四次代表大会上的讲话几乎是一口一个“三个代表”，整篇讲话中没有一次提到“以胡锦涛为首的党中央”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +222,7 @@
   </div>
  </center>
  <p>
-  4月16日凌晨，周恩来一行由仰光飞往雅加达。“空中霸王号”飞行8个小时进入新加坡空域，正赶上航线前方有雷雨区。飞机无法飞越雷雨区，4月16日上午飞机降落新加坡加冷机场。4月16日晚6时，周恩来到达印度尼西亚首都雅加达。
+  有评论说，王兆国如此公开地藐视胡锦涛，不承认以胡为总书记和国家主席的地位，就是向胡锦涛叫板，表明自己是江泽民的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,9 +237,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   声东击西 周恩来让别人枉做了替死鬼
-  </strong>
+  坊间传闻，2002年江泽民要废掉胡锦涛的时候，据称王兆国又一次站了出来，以当事人的身份，揭了胡锦涛在团中央期间的“丑闻”。王的举动令胡锦涛大为意外，要不是乔石和李瑞环早有准备，胡锦涛就很可能在王兆国的检举下，被置于死地，被江泽民废掉，中共历史也将重写。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +252,7 @@
   </div>
  </center>
  <p>
-  “克什米尔公主号”爆炸失事后，香港警方随即展开艰苦的调查，一无所获。后来还是根据中共提供的情报才破了案。中共明确告知事件是国民党保密局香港情报站策动，主谋赵斌成，指挥者金建夫，执行者是香港机场地勤人员周驹，使用的定时炸弹是从台湾基隆秘密运到香港。
+  2003年3月，王兆国又当选为第十届全国人大常委会排名第一位的副委员长。2008年3月，王兆国连任第十一届全国人大常委会副委员长；2013年，以国家级副职领导人级别届满退休。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +267,7 @@
   </div>
  </center>
  <p>
-  调查人员非常困惑不解：既然周恩来对这事了如指掌，为什么还要中共代表团其他成员按原计划飞行，去送死呢？原来周恩来为迷惑台湾香港情报站不再改变计划，确保自己的安全，让包括自己司机在内的11名中外菁英去送死。据周恩来后来说，这叫做“声东击西”、“丢车保帅”。
+  王兆国儿子王新亮，又称王新宇。2014年4月有媒体报导，王新亮卷入多个重大案件被有关部门正式拘押调查。这些报导至今未被官方证实。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -272,11 +281,14 @@
    </div>
   </center>
   <p>
-   责任编辑:徐枫
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
   </p>
   <p>
    本文短网址:
-   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb3qNc"/>
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40ZO"/>
    转载请注明出处，
    <span style="color:red">
     严禁建立镜像网站
@@ -322,13 +334,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/916336.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/955506.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/955506.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/955506.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/12/955506.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/916336.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/955506.md' width='0px' height='0px'/>
