--- a/pages/nsc412/n12612906.md
+++ b/pages/nsc412/n12612906.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12·11】多位知名保守人士吁新选举人" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-521220070-600x400.jpg"/>
+<div><img alt="【大选更新12·11】纳瓦罗：脸书的事实核查员是中共" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/03/Peter-Navarro-slams-big-pharma-700x420-600x400.jpg"/>
 <div class="caption">
- 媒体研究中心（Media Research Center）创始人兼总裁布伦特·博泽尔（Brent Bozell）资料照。（Kris Connor/Getty Images）
+ 图为美国白宫贸易与产业顾问彼得·纳瓦罗（Peter Navarro）。(Samira Bouaou/The Epoch Times)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
