--- a/pages/nf4514/n12612906.md
+++ b/pages/nf4514/n12612906.md
@@ -1,4 +1,4 @@
-### 【大选更新12·11】纳瓦罗：脸书的事实核查员是中共
+### 【大选更新12·11】最高法驳回德州诉讼
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -15,7 +15,22 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月11日讯】（大纪元记者陈霆、徐简、戴芙若、李言综合报导）德州告四
+ 【大纪元2020年12月11日讯】（大纪元记者陈霆、徐简、戴芙若、李言综合报导）美国联邦最高法院周五（12月11日）驳回了德克萨斯州针对四个关键州的2020年大选结果的诉讼。
+</p>
+<p>
+ 在一项命令中，最高法院大法官们拒绝了德克萨斯州起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的请求，认为孤星州缺乏能够起诉的宪法地位。
+</p>
+<p>
+ 该命令中写道：“在其他州进行选举的问题上，得克萨斯州没有证明其司法上认可的利益。所有其他未决动议均视为没有意义而不予考虑。”
+</p>
+<p>
+ 大法官塞缪尔·阿利托（Samuel Alito）对此持不同意见，他说：“在我看来，我们无权否决其提交诉状，因为该案属于我们管辖范围内。……因此，我会批准提交该诉状的动议，但不批准其他救济，而且我对任何其他问题均不发表意见。”
+</p>
+<p>
+ 克拉伦斯·托马斯（Clarence Thomas）法官与阿利托一起提出了异议。
+</p>
+<p>
+ 德州告四
  <ok href="https://www.epochtimes.com/gb/tag/%E6%91%87%E6%91%86%E5%B7%9E.html">
   摇摆州
  </ok>
