同步于: 12月12日18时52分

--- a/pages/nf4514/n12612906.md
+++ b/pages/nf4514/n12612906.md
@@ -102,7 +102,7 @@
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
- 的“事实检查员”是中共。”
+ 的‘事实检查员’是中共。”
 </p>
 <blockquote class="twitter-tweet">
  <p dir="ltr" lang="en">
