--- a/pages/p8/955344.md
+++ b/pages/p8/955344.md
@@ -1,4 +1,4 @@
-### 丢车保帅？这张照片泄露了周恩来内心诡秘(图)
+### 要辞职？认清“5件事”再决定(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）" src="https://img2.secretchina.com/pic/2019/10-31/p2552801a305236912-ss.jpg" style="height:338px; width:600px"/>
+ <p dir="ltr" style="text-align:center">
+  <img alt="成功 辞职 老板 团队" src="https://img2.secretchina.com/pic/2019/6-15/p2446362a885831392-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）
+   坚持不一定
+   <strong>
+    成功
+   </strong>
+   ，坚持到底一定成功。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,76 +33,140 @@
   </div>
  </div>
  <p>
-  1955年4月11日，
+  为什么想
   <strong>
-   万隆会议
-  </strong>
-  前夕，“
-  <strong>
-   克什米尔公主号
-  </strong>
-  ”飞机爆炸案曾震惊国际。随后真相不断披露，时任中共总理
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/周恩来" target="_blank">
-    周恩来
+   <span href="https://www.secretchina.com/news/gb/tag/辞职" target="_blank">
+    辞职
    </span>
   </strong>
-  预先已知道这起针对他的暗杀行动，但周为了自保和迷惑对手，临时改变路线却让其他人作了替死鬼。
+  ？理由五花八门——工作太累，吃不消，受不了；主管、同事的行为让人反感；
+  <strong>
+   老板
+  </strong>
+  出尔反尔；偏离了个人的职业规划等等……终归一句话：我不想再干下去了。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  网络曾曝光一张当时周恩来改变路线后于1955年4月16日上午抵达新加坡加冷机场的罕见照片，照片中周恩来诡异的眼神或泄露其当时的诡秘内心世界。从照片上看，周恩来和许多随行人员在一起，大家都目视前方，行色匆匆，唯有周恩来微仰着头，向天空张望，目光诡异。
+  有过辞职念头的人，先看看以下5点，不管你辞不辞职，对你都会有所帮助。
  </p>
  <p>
-  此前4月11日，周恩来原计划乘坐的“
-  <span href="https://www.secretchina.com/news/gb/tag/克什米尔公主号" target="_blank">
-   克什米尔公主号
+  <strong>
+   1、辞职，你就要重新开始
+  </strong>
+ </p>
+ <p>
+  离开公司，到下一家公司，你就是一个新人，要学习公司的规章制度、工作内容、以及公司的运作流程等等，你要适应新的工作环境和生活，你要重新认识主管、同事，跟他们工作，配合完成任务。
+ </p>
+ <p>
+  总之，一切都是新的，这期间，你还要调整好心态，尽快学会适应公司的节奏。
+ </p>
+ <p>
+  <strong>
+   2、做不顺就辞职，永远都在做新人
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  进入公司一两个月，每天做着同样的工作，感觉自己没什么进展，好像没学到什么，然后开始怀疑自己是不是不适合这份工作？思考要不要重新找一份工作。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不适合自己的工作，当然要换，坚持就是一个错。如果一两个月还看不到效果，先反思自己，是不是方法不对？或请教同事，及时总结然后改进，再看看情况怎么样。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  老想着做不顺就放弃，你到下一家公司，还是会因为做不顺就放弃，要学会从自己身上找原因，工作是客观因素。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   3、公司不养闲人，
+   <span href="https://www.secretchina.com/news/gb/tag/团队" target="_blank">
+    团队
+   </span>
+   不用懒人
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  你一定要明白：公司不是慈善家，不会养闲人，团队也不要懒队友。你进来公司，就一定是要为公司创造价值，你要让主管看到自己的价值，如果你在现在的公司还无法让别人看到你的价值，那么，你到下一家公司依然会是这样的状态，还不如跟着大家好好学习；如果是因为公司给你高层管理的待遇却让你干普通员工的工作，这个可以跟主管反馈。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  刚进入公司，主管不可能放心把重大的任务全权交给你负责，这是一个
+  <span href="https://zh.wikipedia.org/wiki/%E5%AE%9A%E5%BE%8B">
+   定律
   </span>
-  ”飞机爆炸，机上有11人无辜遇难，而预先知悉暗杀计划的周恩来则金蝉脱壳。
- </p>
- <p>
-  <strong>
-   掌握情报“克什米尔公主号”有炸弹
-  </strong>
- </p>
- <p>
-  综合多方报导，1955年4月18日至24日，第一次亚非会议在印度尼西亚的万隆举行。周恩来为中国代表团团长，并租用印度航空公司的“克什米尔公主号”客机，率团取道香港前往万隆。
- </p>
- <p>
-  4月3日，中共接到密报，国民党特务机关已获悉中共代表团行踪，可能采取行动。9日晚，进一步情报称，代表团所乘飞机将遭破坏，飞机上备有定时炸弹。周恩来立即要求通过外交渠道向英国政府交涉。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  10日上午，中共外交部紧急约见英国驻华代办处参赞艾惕恩，告知这一消息。新华社香港分社9日晚即将这一情况正式通知港英当局，还在11日两次约见印度航空公司驻香港分公司经理。该经理表示一定严加防范，不让任何外人接近飞机。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  在当年四月十一日“克什米尔公主号”出事前八天，中共就掌握了“克什米尔公主号”客机将被炸毁的情报。
+  （尤其是大公司），让你先干点基本的，一是让你多了解公司，二是考察你，如果通过，自然会给你分配相应岗位的任务，决不会养闲人的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +182,7 @@
  </center>
  <p>
   <strong>
-   照常起飞中途爆炸坠海导致11人遇难
+   4、没有哪个行业的钱是好赚的
   </strong>
  </p>
  <center>
@@ -130,7 +198,7 @@
   </div>
  </center>
  <p>
-  4月11日上午，“克什米尔公主号”准时到达北京，接载中共代表团和三名外国记者，当时人们并不知道周恩来不在飞机上。12时15分，“克什米尔公主号”抵达香港启德机场，休息加油后飞印尼的万隆。
+  既然你进入这个公司（行业），先别急着赚钱，先赚知识；赚不到知识，就赚经历；赚不到经历，就赚阅历；阅历、经验、知识都赚到了，也就肯定会赚到钱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,24 +213,7 @@
   </div>
  </center>
  <p>
-  下午6时30分，机舱内突然发出爆炸声，随即多处起火。机长决定强行降落，并用无线电发出三次求救信号。雅加达机场得知周恩来不在机上，信号中断。伴随着一声巨大的爆炸声，飞机坠入大海，炸成几段。除三名机组人员奇迹生还，机上其余11人全部遇难。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   全身而退 周恩来“丢卒保车金蝉脱壳”
-  </strong>
+  没有哪一份工作钱多、事少，离家近的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,7 +232,7 @@
   </ins>
  </center>
  <p>
-  “克什米尔公主号”事件的目标直指周恩来，但周恩来却临时改变了路线，金蝉脱壳，从昆明取道仰光到达雅加达。
+  钱并不是那么好赚的，一切都要靠自己，要通过自己双手努力才能换来，可能你付出很多时间和精力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,22 +247,7 @@
   </div>
  </center>
  <p>
-  4月7日，周恩来和陈毅率代表团从北京乘伊尔——14飞机首先飞昆明。4月14日清晨7时15分，周恩来一行26人乘坐从印度航空公司租借的另一架专机“空中霸王号”自昆明起飞，前往仰光。当地时间上午10点30分，“空中霸王号”降落在仰光机场。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  4月16日凌晨，周恩来一行由仰光飞往雅加达。“空中霸王号”飞行8个小时进入新加坡空域，正赶上航线前方有雷雨区。飞机无法飞越雷雨区，4月16日上午飞机降落新加坡加冷机场。4月16日晚6时，周恩来到达印度尼西亚首都雅加达。
+  刚开始起步，总会有点难的，不要心急气躁，付出总是会有回报的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -227,7 +263,7 @@
  </center>
  <p>
   <strong>
-   声东击西 周恩来让别人枉做了替死鬼
+   5、充实自己，让自己顺利度过迷茫期
   </strong>
  </p>
  <center>
@@ -243,7 +279,7 @@
   </div>
  </center>
  <p>
-  “克什米尔公主号”爆炸失事后，香港警方随即展开艰苦的调查，一无所获。后来还是根据中共提供的情报才破了案。中共明确告知事件是国民党保密局香港情报站策动，主谋赵斌成，指挥者金建夫，执行者是香港机场地勤人员周驹，使用的定时炸弹是从台湾基隆秘密运到香港。
+  让人迷茫的原因一个原因是在本该奋斗的年纪，却想得太多，做得太少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +294,41 @@
   </div>
  </center>
  <p>
-  调查人员非常困惑不解：既然周恩来对这事了如指掌，为什么还要中共代表团其他成员按原计划飞行，去送死呢？原来周恩来为迷惑台湾香港情报站不再改变计划，确保自己的安全，让包括自己司机在内的11名中外菁英去送死。据周恩来后来说，这叫做“声东击西”、“丢车保帅”。
+  所以，最好的办法，就是让自己每天过得充实起来。我们可以在工作之余，做自己喜欢的事，最紧要的是，无论工作上多么不顺，千万不要把消极情绪带回家，我们可以在上班时间，努力把工作做好，做到极致，下班一身轻松回家，没有负担，生活充实就不会让自己想太多。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  跳槽穷半年，改行穷三年。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  谁能最后享受到胜利成果？请记住：坚持不一定
+  <span href="https://www.secretchina.com/news/gb/tag/成功" target="_blank">
+   成功
+  </span>
+  ，坚持到底一定成功！好好工作吧！
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -272,11 +342,11 @@
    </div>
   </center>
   <p>
-   责任编辑:徐枫
+   责任编辑:肖品
   </p>
   <p>
    本文短网址:
-   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb3qNc"/>
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40Wm"/>
    转载请注明出处，
    <span style="color:red">
     严禁建立镜像网站
@@ -322,13 +392,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/916336.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/955344.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/955344.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/955344.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/12/955344.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/916336.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/955344.md' width='0px' height='0px'/>
