--- a/pages/p3/955552.md
+++ b/pages/p3/955552.md
@@ -1,4 +1,4 @@
-### 毛洪涛之死引争论 党委书记与校长谁大？(图)
+### 冷知识：日本的首都竟不是东京？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="成都大学 " src="https://img3.secretchina.com/pic/2020/10-19/p2799081a487707594-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="日本冷知识 日本 日本女子 和服" src="https://img3.secretchina.com/pic/2020/12-12/p2836501a828364829-ss.jpg" style="height:449px; width:600px"/>
   <br>
-   警方于16日在江安河温江段一河道内发现成都大学党委书记毛洪涛（左）的遗体。（图片来源：网络图片）
+   穿日本传统服饰“和服”的日本女子。（图片来源：Pixabay)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,29 +21,25 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月19日讯】（看中国记者黎小葵综合报导）在“凡事党管”的中国大陆，
+  【看中国2020年12月12日讯】所谓“
   <strong>
-   成都大学
+   冷知识
   </strong>
-  党委书记
+  ”，指的是那些表现为偏门的、琐碎的、庞杂的知识跟事情。这些知识看似有些稀奇古怪，或饶富趣味、并随时充斥在我们的生活周遭，却鲜少人会去注意。本文想谈一谈几个你可能没听过的“
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/毛洪涛" target="_blank">
-    毛洪涛
+   <span href="https://www.secretchina.com/news/gb/tag/日本" target="_blank">
+    日本
    </span>
   </strong>
-  与该校校长
-  <strong>
-   王清远
-  </strong>
-  之间的矛盾，在毛洪涛身亡后引发舆论对中国大学里党委书记和校长何者为大、职权分工的议论。
+  冷知识”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -51,43 +47,28 @@
  </p>
  <p>
   <strong>
-   毛洪涛告别仪式
-   <span href="https://www.secretchina.com/news/gb/tag/王清远" target="_blank">
-    王清远
-   </span>
-   未现身惹议
+   日本首都到底是哪里？
   </strong>
  </p>
  <p>
-  《中国新闻周刊》报导，10月18日在毛洪涛遗体告别仪式上，有亲友及学生到场，但未见
-  <span href="https://www.secretchina.com/news/gb/tag/成都大学" target="_blank">
-   成都大学
+  当被问到日本的首都是哪里的时候？相信很多人都会不假思索地回答道，
+  <span href="https://www.secretchina.com/news/gb/tag/东京" target="_blank">
+   东京
   </span>
-  校长王清远现身。有知情人称，“追悼会里面挤满了人，10点成大的人才到。”
+  ！
  </p>
  <p>
-  成都大学官方微博在10月16日发布毛洪涛去世消息后，截止发稿未见更新消息。
+  但其实，并没有明确的法案能够确认
+  <span href="https://zh.wikipedia.org/wiki/%E4%B8%9C%E4%BA%AC" target="_blank">
+   东京
+  </span>
+  的首都地位。虽然日本曾于1950年颁发《首都建设法》并定都于东京，但又于1956年废除此法。所以现在日本没有法律能证明东京就是日本首都。
  </p>
  <p>
-  对此，民间议论纷纷。有网友质疑表示，“这事就⋯⋯完了？”“坐等真相”、“查那个校长啊”、“大学校长有保护伞吗”、“这种级别的校长比很多地级市的市长都级别高”。
+  日本的首都主要随着天皇的居住地而定，现今来说确是东京无疑，因为天皇居所，皇室与中央政府的所在地都位于东京。
  </p>
  <p>
-  也有网友留言，“去成都大学官网看了下，王校长的新闻很多，新闻的标题都是‘王清远校长⋯⋯’，唯一有毛书记的新闻是9月29日，标题是‘希腊大使来访’，标题里没有毛的名字，不看内容还不知道。很反常，这个校长果然很强势⋯。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另有人质疑热搜压新闻，“热搜只能在本地看到了。”“压着热搜一点意思都没有，不报导，压新闻。”“所以热搜就这么没了，没人来调查？ ”
+  但日本各界定义首都的标准也不一致（例如皇室居所位置、天皇御座位置、政府驻地等），加上昔日朝廷所在地京都仍留有旧皇宫、天皇御座等皇室设施，因而一直存在着首都是京都还是东京之争。后继的《首都圈整备法》将东京都与周围地区定为日本政治、经济、文化等领域中心的“首都圈”，但是仍然没有明说东京就是首都。所有如果你在一个京都人面前说东京是首都，他可能很不乐意哦。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -103,7 +84,7 @@
  </center>
  <p>
   <strong>
-   党委书记和校长谁权大？
+   喜事丧事都送花圈
   </strong>
  </p>
  <center>
@@ -119,7 +100,7 @@
   </div>
  </center>
  <p>
-  毛洪涛15日在微信朋友圈发布了一条带有“绝笔信”意味的长文后投河溺死。他在文中披露校长王清远在成都大学建立利益集团和独立王国，并连续挤压三任党委书记，而他本人是被害最深之人。
+  在日本结婚、新店开张会送花圈。在日本无论喜事丧事都会送花圈，不过颜色、款式不一样。喜事用的花圈，颜色艳丽，多为暖色调。丧事用的花圈则以黑色和白色为主色调。朋友之前有时候会送桌面花圈作为小礼物表达祝福，就是迷你花圈。这些用于喜庆活动的花圈，一般都是非常鲜艳的红色，最大的有4米高。而用于丧葬的花圈则是白黑色为主，差别还是很大的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -134,82 +115,11 @@
   </div>
  </center>
  <p>
-  10月16日早上，警方在江安河温江段一河道内发现他的遗体，陈尸处就在毛洪涛住处附近。对此，民间普遍猜测他是投河自杀“以死换清白”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  众所周知，在中共执政下，中央与地方政府部门、国有企业、大学及机关或事业单位都设有党委书记。大学除了校长，还有党委书记，实施的是“党委领导下的校长负责制”。校长通常具有学术背景，党委书记则未必。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中央社报导，2014年中央政治局审议通过“关于坚持和完善普通高等学校党委领导下的校长负责制的实施意见”，明确指出“党委领导下的校长负责制是中国共产党对国家举办的普通高等学校领导的根本制度”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  也就是说，党委是学校的领导核心、“政治核心”，党委书记管辖党务、人事、意识形态工作；校长虽然掌握行政、科研、财政等权利，但校长必须尊重党委对学校行政重大问题和重要事项的决策权。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  事实上，历年对于“党委书记和校长谁大”的讨论从未间断，这也说明这一问题很难明确。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  但外国对于中国大陆这套“党管”制度大多难以理解。据了解，一些中国大学的党委书记到国外访问时，对自己的身分感到尴尬，有人还因此另外创出“校务委员会主任”的头衔。
+  第一次见到日本新店开业的朋友一定会很惊讶吧。店外摆满大大小小的“花圈”，乍一看还以为是在办白事儿呢。在
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  人看来，这真是“触了霉头”。不过在日本，送花圈就相当于我们中国人的送花篮，代表着祝福。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,8 +135,85 @@
  </center>
  <p>
   <strong>
-   王清远是谁？
+   从果汁包装就可以分辨果汁纯度
   </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  如何辨别是不是百分百的纯果汁呢？让我来告诉告诉你，在日本，只有100%纯度的纯果汁，包装上的照片图案才可以出现水果被切开露出切面的照片。如果果汁占比在5%以上100%以下的果汁，包装图案只能有水果但是不能被切开。而果汁占比在5%以下的话，那包装就连水果都不能出现了。日本果然是细节大国啊，从这一点也可以稍微嗅出一点日本对无添加，原汁原味的一种追求吧。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   日本圣诞节吃肯德基
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  我们都知道在圣诞节这一天，很多西方人吃火鸡、火腿等传统圣诞食物。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但在日本，吃肯德基成了日本人过圣诞节的传统。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  原来当年圣诞节传入日本的时候，日本没有火鸡可吃，这时肯德基看到市场的空白，趁机发出“圣诞节就吃肯德基”的广告，而且肯德基上校与圣诞老人又有几分相似，所以这个圣诞节吃肯德基的传统就被延续下来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -245,53 +232,8 @@
   </ins>
  </center>
  <p>
-  毛洪涛在生前提到一个名字——王清远。最初王清远引起外界关注是他刚上任成都大学校长，在毕业典礼上有一名女生向他献吻。当时王清远面对这一“意外”，称自己很感动。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  成都大学资料显示，王清远是重庆人，在四川大学本硕毕业后，于1999年至2003年先后在美国普度大学工学院做博士后和日本鹿儿岛大学作JSPS研究员，2003年回到四川大学工作，历任建筑与环境学院院长、人事处处长。 2014年5月开始，王清远担任成都大学校长，并于今年第6次入选中国“高被引学者”榜单。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不过，关于毛洪涛与王清远的矛盾细节为何、是否涉及成都大学执行项目的利益，官方至今未对外具体说明，仅称仍有待调查。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   成都大学党委书记一职6年换3任
+   乘坐出租车时 不要自己动手去开车门
   </strong>
  </p>
  <center>
@@ -307,7 +249,7 @@
   </div>
  </center>
  <p>
-  此前有媒体报导，王清远担任成都大学校长后，成都大学党委书记一职频繁更换，大都未做满一届任期就离职，包括2015年上任的毛志雄于2017年卸任，罗波于2017年上任，2018年离职。
+  如果你在日本搭乘出租车，千万不要去触碰车上的门，一般司机会给你直接开或者车子本身自动就会打开，如果你去自己用手开门，会被司机视为对他职业的亵渎。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -322,7 +264,9 @@
   </div>
  </center>
  <p>
-  而毛洪涛是在2019年3月出任成都大学党委书记，担任成都大学党委书记一职至今有一年半时间。
+  <strong>
+   为什么东京迪士尼的员工不会跟游客说“欢迎光临” ？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -337,7 +281,7 @@
   </div>
  </center>
  <p>
-  公开资料显示，毛洪涛出生于1970年11月，1996年7月参加工作，西南财经大学会计学专业毕业，博士研究生学历，教授，博士生导师。生前是成都大学党委书记。
+  东京迪士尼的员工不会跟游客说“欢迎光临”，因为游客会没话接，所以员工们会对游客说“你好”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -351,27 +295,40 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  <strong>
+   日本竟然有个“美国”和“中国”
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在北海道小樽附近，有一个小城市叫做美国，值得一提的是日本确实还有一个地名叫中国，准确来说是“中国地方”，包括鸟取县、岛根县、广岛县、冈山县和山口县，是对日本而言比较大且重要的一片区域。然而此盗版“美国”是位于北海道小樽市西北面的一个非常小的城镇。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  看完这些，涨知识了吧？
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -384,6 +341,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:海洋
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40a8"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -401,13 +392,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949651.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949651.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949651.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/19/949651.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955552.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955552.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/955552.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/12/955552.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949651.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/955552.md' width='0px' height='0px'/>
