--- a/pages/p4/955588.md
+++ b/pages/p4/955588.md
@@ -1,4 +1,4 @@
-### 做人，一定要有尊严(图)
+### 两颗爆炸的流星 高于最高法院的变局(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="做人，一定要有尊严，它是一个人的脸面和底线。" src="https://img3.secretchina.com/pic/2020/8-7/p2748872a362410392-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="2020年11月1日，在北卡罗来纳州的竞选集会上，一名老兵在国歌中敬礼。" src="https://img3.secretchina.com/pic/2020/12-12/p2836771a778077782-ss.jpg"/>
   <br>
-   做人，一定要有尊严，它是一个人的脸面和底线。（图片来源：Adobe stock)
+   2020年11月1日，在北卡罗来纳州的竞选集会上，一名老兵在国歌中敬礼。（图片来源：Michael Ciaglo/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,69 +21,52 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  【九評之二】評中國共產黨是怎樣起家的](http://141.164.51.119:10000/videos/news/../res/jiuping/index.html)
-
-#### [ 🔥  走出文化亡国第八集 - 中共通过这个几个“阴招”让国人不断“遗忘历史”  ](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
-
-#### [ 🔥  【內幕】中共女軍醫掩蓋身份在美被捕过程](http://141.164.51.119:10000/videos/news/spy02.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/做人" target="_blank">
-    做人
-   </span>
-   ，一定要有尊严
-  </strong>
+  【看中国2020年12月12日讯】在美国最高法院拒绝受理德州等19州状告4个摇摆州选举违宪之后，
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)团队走常规法律途径的道路似乎已经走到了头。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/尊严" target="_blank">
-   尊严
+  10天前的12月2日，川普突然通过罕见录播的方式，对外界发表了一段讲话，在讲话的一开头，他就说：“这也许是我所做过的最重要的讲话”。在这番长达45分钟的讲话里，川普用了大部分时间，列举了此次
+  <span href="https://www.secretchina.com/news/gb/tag/大选" target="_blank">
+   大选
   </span>
-  ，是一个人的脸面； 尊严，是一个人的底线； 尊严，是一个人骨子里的自尊； 尊严，是一个人做人的底气。
+  中的种种触目惊心的舞弊，更关键的是他表明了捍卫美国的决心，他说：
  </p>
  <p>
-  人活着，尊严第一。
+  “作为总统我而言，没有比捍卫美国
+  <span href="https://www.secretchina.com/news/gb/tag/法律" target="_blank">
+   法律
+  </span>
+  和《宪法》更高的职责。这就是为什么我决心保护我们的选举系统，该系统目前正受到蓄意攻击，并且在总统选举之前的几个月就已经开始了。”
  </p>
  <p>
-  人没尊严，谁都会看不起你；人没尊严，谁都想来欺负你。
+  几乎在川普总统发布他的最重要讲话的同时，即12月2日下午，纽约州上空突传出爆炸巨响，在马里兰州、密歇根州、纽约州、俄亥俄州、宾州、维吉尼亚州以及加拿大安大略省，很多民众目睹了大白天
+  <span href="https://www.secretchina.com/news/gb/tag/流星" target="_blank">
+   流星
+  </span>
+  在空中爆炸出现的火光，有近100起关于火流星的汇报信息。
  </p>
  <p>
-  尊严，比钱财更重要；尊严，比金银更贵重。
+  美国太空总署（NASA）流星观察小组随后证实，这起流星爆炸事件，是一颗大型流星进入纽约上空大气层所引发。流星以约9万公里时速向西移动，并在22英里高空爆炸，爆炸时产生强烈刺目的闪光。
  </p>
- <p>
-  <strong>
-   一撇一捺写人生，一生一世学做人
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  做人，一定要有尊严，再穷，也不能乞讨求活，再难，也不能低三下四。
+ <p style="text-align:center">
+  <br>
+   12月2日的流星视频。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +81,10 @@
   </div>
  </center>
  <p>
-  尊严，是一个人受人敬仰的基础；尊严，是一个人昂首挺胸的底气。
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  人讲天人合一，天呈异象往往对映着人间有大事发生。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,84 +99,9 @@
   </div>
  </center>
  <p>
-  守住尊严，就守住了骨气，守住尊严，才能被人尊重。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  看不起你的人，趁早远离；嫌弃你的人，不要去讨好。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  穷，就努力去证明自己可以，苦，一个人扛下去必有光明。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人活着，就要挺直腰杆做人
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  别为了钱财，就丢掉尊严；别为了利益，就没了骨气。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  可以付出，但不抛弃自己的原则；可以忍让，但不丢掉做人的
-  <span href="https://www.secretchina.com/news/gb/tag/底线" target="_blank">
-   底线
+  上一次美国处于严重分裂危机，是林肯总统所处的内战时期，而就在历史要开始演绎那场大变局时，也是在美国东北的天空中出现了罕见的
+  <span href="https://www.secretchina.com/news/gb/tag/天象" target="_blank">
+   天象
   </span>
   。
  </p>
@@ -207,9 +118,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   尊严，是人与人相处的根本
-  </strong>
+  1860年的7月20日，北到弗蒙特州（Vermont），南到维吉尼亚州（Virginia），西到五大湖，东到大西洋，美国的民众们惊讶的看到了划过夜空的一长串火球。这是一种被称为流星串的罕见现象，它是由一颗大的流星，爆炸分裂成几块，然后继续按照原来轨迹运动所造成的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,7 +133,100 @@
   </div>
  </center>
  <p>
-  努力保护好自己的尊严，不讨好，不巴结，不屈服。
+  这一幕当时也被美国著名画家雷德里克・丘奇（Frederic Church）看到，他为此专门画了一副油画《1860年的流星》，画出了他那天晚上从卡茨基尔山脉附近的家中看到的夜空。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img src="https://img3.secretchina.com/pic/2020/12-12/p2836731a343212664-ss.jpg"/>
+  <br>
+   美国著名画家雷德里克・丘奇1860年创作的油画《1860年的流星》。（图片来源：公有领域）
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在这颗流星爆炸之后的4个月，林肯当选为总统。又过了5个月，美国南北战争爆发，而已经在北美存在了250年的奴隶制，也因这场战争被彻底废除了。美国变成了一个新的、不再有奴隶制的美国。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  而当时看到夜空中的那串流星的人们，很少有人会预料到随后到来的这场大变局。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  曾经根深蒂固的奴隶制，不是通过最高法院，而是通过一场变局的到来才能废除的。今天全方位侵蚀美国的共产主义，很可能也不会是通过最高法院，同样也是要通过一场变局才能清除。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  1826年，在美国独立日50周年大庆前夕，当时已是91岁的美国第二任总统亚当斯，在写给当地独立日委员会的信中，回顾50年前的美国独立，他写道：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “那是一个不会被人类历史忘记的纪元，注定会在未来历史上写下——或者是最闪亮的一页，或者是最黑暗的一页，这取决于这些政治机构在未来是会被善用，还是会被滥用，这些政治机构会被未来人们的思想所改变。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +245,7 @@
   </ins>
  </center>
  <p>
-  认真去对待别人的尊严，别挑事，别践踏，别欺负。
+  亚当斯总统是多么的有远见，今天美国的国会、法院、政府等各个政治机构，几乎已经被左派社会主义占据，它正在试图滥用这些机构，在美国写下最黑暗的一页。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +260,25 @@
   </div>
  </center>
  <p>
-  尊严，一个人立于世的资本，不要随意就把它丢弃。
+  1803年，另一位美国国父，美国第二任总统、独立宣言的作者杰斐逊，绕过所需要的宪法修改程序，“越权”从拿破仑手上买下了法属路易斯安那，此举不仅使美国国土面积增长了一倍，而且永远消除了另一个欧洲强权从美国后院威胁美国的可能。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img src="https://img3.secretchina.com/pic/2020/12-12/p2836741a998559020-ss.jpg" style="height:480px; width:391px"/>
+  <br>
+   画于1800年的美国第三任总统杰斐逊的画像。（图片来源：公有领域）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,7 +293,7 @@
   </div>
  </center>
  <p>
-  尊严，是一个人的最大颜面，不能随意就玩弄他人。
+  杰斐逊在1810年写的一封信中谈到官员是否应该采取超出成文法律之外的行动，他写道：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -288,9 +308,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   尊严，永远第一
-  </strong>
+  “严格遵守成文的法律无疑是好公民的责任之一，但却不是最高责任。为了必须的，为了自我生存，为了在危险中拯救我们的国家而采取非成文的法律，是更高的必要。因为严格遵守成文的法律而失去我们的国家，其结果也就是失去法律本身，随之失去的还有生命、自由、财产，和所有那些和我们一起拥有这些的人们。因此这是荒谬的只为了过程而牺牲了结果。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -305,8 +323,21 @@
   </div>
  </center>
  <p>
-  人这辈子，无论遇到什么事，都要守住自己的尊严和底线。
+  杰斐逊在这里所讲的最高责任和更高的必要，也正是川普总统当下所面对的。相信川普总统会突破框架，做出他必须要做的，社会主义（共产主义）不会被允许在美国写下黑暗的一页。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ (文章仅代表作者个人立场和观点)
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -320,35 +351,19 @@
   </div>
  </center>
  <p>
-  丢什么也不能丢尊严，没什么也不能没骨气。
+  来源:
+  <span href="/news/gb/tag/看中国  ">
+   看中国
+  </span>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  做人顶天立地，才能受人敬仰；做人堂堂正正，才能无愧于心。
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40ai"/>
+  版权所有，任何形式转载需看中国授权许可。
+  <span style="color:red">
+   严禁建立镜像网站.
+  </span>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -367,45 +382,33 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/942097.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/942097.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/942097.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/08/942097.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/955588.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/955588.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/955588.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/12/955588.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/942097.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/955588.md' width='0px' height='0px'/>
