--- a/pages/nf4514/n12615033.md
+++ b/pages/nf4514/n12615033.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.12】川普：最高法院无智无勇" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/472622-600x400.jpg"/>
+<div><img alt="【大选更新12.12】川普：我们才刚刚开战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/50664501548_bedfe63661_o-600x400-1.jpg"/>
 <div class="caption">
- 德州起诉四摇摆州选举违宪一案，遭到联邦最高法院以缺乏提诉资格为由驳回。美国总统川普发推表示，最高法院令人失望，无智无勇！图为资料照。（白宫）
+ 图为美国总统川普（特朗普）资料照。（白宫）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月12日讯】（大纪元记者陈霆综合报导）美东时间周五（11日）晚间，德州起诉四
+ 【大纪元2020年12月12日讯】（大纪元记者陈霆、李言综合报导）美东时间周五（11日）晚间，德州起诉四
  <ok href="https://www.epochtimes.com/gb/tag/%E6%91%87%E6%91%86%E5%B7%9E.html">
   摇摆州
  </ok>
@@ -52,6 +52,57 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
+<h3>
+ 支持川普的团体将在华盛顿集会 呼吁大选诚信
+</h3>
+<p>
+ 在2020年大选舞弊令人们忧心忡忡之际，几个团体计划周六（12月12日）在华盛顿举行集会，呼吁还大选诚信。
+</p>
+<p>
+ “停止窃选”（Stop the Steal）运动和“为川普游行”（Stop the Steal）的组织者都将在美国国会大厦举行活动。
+</p>
+<p>
+ “我们要的是大选诚信。这是为了保护我们的大选，我们希望我们的总统知道，我们站出来支持他，我们支持他为大选诚信而战，我们和他在一起。”“为川普游行”的组织者艾米-克雷默（Amy Kremer）上个月告诉《大纪元时报》。
+</p>
+<p>
+ 该组织和其它组织在大选后不久就在哥伦比亚特区举行了活动。人群规模估计从低的几十万到150万不等。
+</p>
+<p>
+ 克雷默说，根据她的观察，人们对12月12日活动的兴趣很大，这次活动的规模可能比上次更大。
+</p>
+<p>
+ 同日在华盛顿举行的另一个运动是“停止窃选”。该组织认为总统大选遭窃。
+</p>
+<p>
+ “我们正在向政府请愿，要求选举公平和计票透明。”首席组织者阿里·亚历山大（Ali Alexander）本周告诉《大纪元时报》。
+</p>
+<p>
+ “有很多美国人——您看看民调，47%的美国人愿意告诉民调员，他们认为此次大选有一些好笑的地方。这包括30%的民主党人和70%的共和党人。而这场运动就代表了这一点。我们要求我们的官僚们：‘嘿，我们想知道你们是如何计算、如何调整我们的选票的。’他补充说：“我们要求知道，为什么在6月至11月之间，这些规则都被改变了。”
+</p>
+<p>
+ 集会定于上午9点开始，届时将有祈祷。当天全天都有活动。按照计划，集会发言人包括唐纳德·川普（特朗普）总统的前助手塞布·戈尔卡（Seb Gorka）、川普竞选团队助手鲍里斯·艾普斯泰恩（Boris Epshteyn）和今年竞选国会议员的退伍军人比利·普伦佩（Billy Prempeh）。
+</p>
+<p>
+ 据悉，当天至少会有一个“反抗议”活动。组织者是极左安提法（Antifa）网络附属的“关掉D.C.”（Shutdown D.C.）。他们自称，从周五晚到周六晚，他们来这里是为了捍卫“Black Lives Matter”（黑人的命也是命，也有译作黑命贵）。
+</p>
+<h3>
+ 【直播预告】12月12日华府大型游行集会
+</h3>
+<p>
+ 随着美国大选舞弊证据的不断曝光，越来越多的美国民众认清这场选举背后关乎美国根基的正邪大战。发起11月14日华盛顿DC大游行的“女性支持美国优先”等组织，计划于本周六（12月12日）再次在美国首府华盛顿举行一系列大型游行演讲活动，表达对大选舞弊的抗议及对川普（特朗普）总统的支持，以保卫美国的宪法及选举制度。主要大型活动包括：
+</p>
+<p>
+ 1.“让教会怒吼！”（Let The Church ROAR！）全国祷告大会
+ <br/>
+ 2.“游行支持川普”（March For Trump）
+ <br/>
+ 3. 百万人MAGA游行（Million MAGA March）
+</p>
+<p>
+ <ok href="https://www.ntdtv.com/b5/2020/12/09/a103006042.html" rel="noopener noreferrer" target="_blank">
+  详情请阅全文。
+ </ok>
+</p>
 <h3>
  川普批最高院无智无勇 吁民众要求州议员为大选诚信而战
 </h3>
@@ -364,6 +415,8 @@
 <p>
  责任编辑：叶紫微
 </p>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 28px; top: 964px; opacity: 1;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
