--- a/pages/p5/955600.md
+++ b/pages/p5/955600.md
@@ -1,4 +1,4 @@
-### 丢车保帅？这张照片泄露了周恩来内心诡秘(图)
+### 中国电信也涉大选舞弊 美国撤销其运营授权(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）" src="https://img2.secretchina.com/pic/2019/10-31/p2552801a305236912-ss.jpg" style="height:338px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="中国电信 大选 舞弊 FCC" src="https://img2.secretchina.com/pic/2019/5-28/p2432921a543307546-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）
+   美国联邦通信委员会(FCC)撤销中国电信运营授权。（图片来源：metamorworks/Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,61 +29,55 @@
   </div>
  </div>
  <p>
-  1955年4月11日，
+  【看中国2020年12月12日讯】（看中国记者文龙综合报导）美国联邦通信委员会(
   <strong>
-   万隆会议
+   FCC
   </strong>
-  前夕，“
+  )表示，已启动撤销
   <strong>
-   克什米尔公主号
-  </strong>
-  ”飞机爆炸案曾震惊国际。随后真相不断披露，时任中共总理
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/周恩来" target="_blank">
-    周恩来
+   <span href="https://www.secretchina.com/news/gb/tag/中国电信" target="_blank">
+    中国电信
    </span>
   </strong>
-  预先已知道这起针对他的暗杀行动，但周为了自保和迷惑对手，临时改变路线却让其他人作了替死鬼。
+  在美国运营授权的程序，这是阻止中共政府控制的企业在美国电信领域发挥作用的进一步举措。并且有信息表明，中国电信和本届
+  <strong>
+   美国大选
+  </strong>
+  存在的
+  <strong>
+   舞弊
+  </strong>
+  现象也有关系。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  网络曾曝光一张当时周恩来改变路线后于1955年4月16日上午抵达新加坡加冷机场的罕见照片，照片中周恩来诡异的眼神或泄露其当时的诡秘内心世界。从照片上看，周恩来和许多随行人员在一起，大家都目视前方，行色匆匆，唯有周恩来微仰着头，向天空张望，目光诡异。
- </p>
- <p>
-  此前4月11日，周恩来原计划乘坐的“
-  <span href="https://www.secretchina.com/news/gb/tag/克什米尔公主号" target="_blank">
-   克什米尔公主号
+  美国联邦通信委员会(
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%81%94%E9%82%A6%E9%80%9A%E4%BF%A1%E5%A7%94%E5%91%98%E4%BC%9A" target="_blank">
+   FCC
   </span>
-  ”飞机爆炸，机上有11人无辜遇难，而预先知悉暗杀计划的周恩来则金蝉脱壳。
+  )12月10日以五比零的压倒性票数，通过“排除华为和中兴通讯设备的清单”，并启动撤销中国电信在美运营过程。
  </p>
  <p>
-  <strong>
-   掌握情报“克什米尔公主号”有炸弹
-  </strong>
+  <span href="https://www.secretchina.com/news/gb/tag/FCC" target="_blank">
+   FCC
+  </span>
+  还推出一项补助计划，至少提供16亿美元的资金，向合格的较小供应商提供替换设备的补偿，该资金正等待国会配发。据悉，一旦资金到位后，偏远地区通讯运营商必须从其网络中排除此类设备或服务，并进行适当处置。
  </p>
  <p>
-  综合多方报导，1955年4月18日至24日，第一次亚非会议在印度尼西亚的万隆举行。周恩来为中国代表团团长，并租用印度航空公司的“克什米尔公主号”客机，率团取道香港前往万隆。
+  FCC主席Ajit Pai表示，我们非常担心
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%AD%E5%9B%BD%E7%94%B5%E4%BF%A1" target="_blank">
+   中国电信
+  </span>
+  将被迫遵守中共政府提供资讯的要求。
  </p>
  <p>
-  4月3日，中共接到密报，国民党特务机关已获悉中共代表团行踪，可能采取行动。9日晚，进一步情报称，代表团所乘飞机将遭破坏，飞机上备有定时炸弹。周恩来立即要求通过外交渠道向英国政府交涉。
+  12月11日，中国外交部发言人在回应相关问题时表示，中方对此坚决反对。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  10日上午，中共外交部紧急约见英国驻华代办处参赞艾惕恩，告知这一消息。新华社香港分社9日晚即将这一情况正式通知港英当局，还在11日两次约见印度航空公司驻香港分公司经理。该经理表示一定严加防范，不让任何外人接近飞机。
+  FCC曾警告可能以国家安全风险为由，结束中国电信美洲公司、中国联通美洲公司、太平洋网络公司及其全资子公司ComNet(USA)在美营运业务。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +92,7 @@
   </div>
  </center>
  <p>
-  在当年四月十一日“克什米尔公主号”出事前八天，中共就掌握了“克什米尔公主号”客机将被炸毁的情报。
+  6月9日，美国参议院公布报告称，近20年未能正确监督中国国有电信企业。美国参议院常设调查小组委员会主席、共和党议员波特曼(Rob Portman)在一份声明中称，“各联邦机构在保护美国电信网络完整性、以及应对来自中国的国家安全威胁方面做的不够。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +107,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   照常起飞中途爆炸坠海导致11人遇难
-  </strong>
+  该委员会中的民主党议员汤姆·卡珀 (Tom Carper)称，“我们让中国的国有企业在我们的电信行业立足，而美国企业在进入中国时却面临重大阻碍。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +122,15 @@
   </div>
  </center>
  <p>
-  4月11日上午，“克什米尔公主号”准时到达北京，接载中共代表团和三名外国记者，当时人们并不知道周恩来不在飞机上。12时15分，“克什米尔公主号”抵达香港启德机场，休息加油后飞印尼的万隆。
+  另外，在本届
+  <span href="https://zh.wikipedia.org/zh-cn/2020%E5%B9%B4%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE" target="_blank">
+   美国大选
+  </span>
+  的
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%88%9E%E5%BC%8A" target="_blank">
+   舞弊
+  </span>
+  疑云中，Dominion投票机公司扮演了重要的角色。随着越来越多的内幕被曝出，有媒体发现，在Dominion担任关键技术人员的安迪‧黄（Andy Huang）曾在中国电信工作。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +145,7 @@
   </div>
  </center>
  <p>
-  下午6时30分，机舱内突然发出爆炸声，随即多处起火。机长决定强行降落，并用无线电发出三次求救信号。雅加达机场得知周恩来不在机上，信号中断。伴随着一声巨大的爆炸声，飞机坠入大海，炸成几段。除三名机组人员奇迹生还，机上其余11人全部遇难。
+  据美国媒体《国家脉动》（The National Pulse）11月25日报道，曾于1998年到2002年间在中国电信工作的安迪‧黄，目前正在Dominion公司担任关键技术职位。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,9 +160,22 @@
   </div>
  </center>
  <p>
-  <strong>
-   全身而退 周恩来“丢卒保车金蝉脱壳”
-  </strong>
+  根据安迪‧黄社交网页的描述，他曾在中国电信期间曾参与“厦门IDC项目”、“厦门市区宽带网络”及“OA Intranet基础设施改革项目”等项目。此外，黄还与思科公司进行了大量合作，而思科因为帮助中共政府维护封锁真实信息的互联网防火墙而臭名昭著。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  他的领英（LinkedIn ）页面个人资料还显示，他的雇主是他的“兴趣”之一。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,8 +193,11 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
-  “克什米尔公主号”事件的目标直指周恩来，但周恩来却临时改变了路线，金蝉脱壳，从昆明取道仰光到达雅加达。
+ <p style="text-align: center;">
+  <img alt="中国电信 大选 舞弊 FCC" src="https://img3.secretchina.com/pic/2020/11-28/p2827041a862707675-ss.jpg" style="height:620px; width:600px"/>
+  <br>
+   领英（LinkedIn ）截图。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +212,7 @@
   </div>
  </center>
  <p>
-  4月7日，周恩来和陈毅率代表团从北京乘伊尔——14飞机首先飞昆明。4月14日清晨7时15分，周恩来一行26人乘坐从印度航空公司租借的另一架专机“空中霸王号”自昆明起飞，前往仰光。当地时间上午10点30分，“空中霸王号”降落在仰光机场。
+  报导提到，美国情报官员已经确认北京愿意将民主党候选人拜登推上总统的位置，中国官方媒体的舆论导向也证实了这些观点。因此关于黄的这个新发现，增加了Dominion系统与中共政府有关联的猜测。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +227,7 @@
   </div>
  </center>
  <p>
-  4月16日凌晨，周恩来一行由仰光飞往雅加达。“空中霸王号”飞行8个小时进入新加坡空域，正赶上航线前方有雷雨区。飞机无法飞越雷雨区，4月16日上午飞机降落新加坡加冷机场。4月16日晚6时，周恩来到达印度尼西亚首都雅加达。
+  在《国家脉动》发表该报道之前，还曾有电脑专家发现，Dominion的子域名与中国福建省泉州市的一个极为不安全的数据中心关联，该数据中心的互联网服务供应商也是中国电信。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,9 +242,11 @@
   </div>
  </center>
  <p>
-  <strong>
-   声东击西 周恩来让别人枉做了替死鬼
-  </strong>
+  美国联邦参议院决定在12月16日就2020年总统大选期间发生的
+  <span href="https://www.secretchina.com/news/gb/tag/舞弊" target="_blank">
+   舞弊
+  </span>
+  行为举行听证会。这会是在联邦级别就2020大选舞弊的第一次听证会。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,22 +261,7 @@
   </div>
  </center>
  <p>
-  “克什米尔公主号”爆炸失事后，香港警方随即展开艰苦的调查，一无所获。后来还是根据中共提供的情报才破了案。中共明确告知事件是国民党保密局香港情报站策动，主谋赵斌成，指挥者金建夫，执行者是香港机场地勤人员周驹，使用的定时炸弹是从台湾基隆秘密运到香港。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  调查人员非常困惑不解：既然周恩来对这事了如指掌，为什么还要中共代表团其他成员按原计划飞行，去送死呢？原来周恩来为迷惑台湾香港情报站不再改变计划，确保自己的安全，让包括自己司机在内的11名中外菁英去送死。据周恩来后来说，这叫做“声东击西”、“丢车保帅”。
+  这次听证会将在参议院国土安全和政府事务委员会中进行，该委员会主席罗恩．约翰逊（Ron Johnson）参议员在一份声明中说：“我注意到，很多已被提出的问题已经并将继续在法院得到适当解决。但是事实是，由于存在明显的违规行为并且尚未得到充分审查，因此很大一部分美国公众并不认为2020年大选结果是合法的。”
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -272,11 +275,15 @@
    </div>
   </center>
   <p>
-   责任编辑:徐枫
+   责任编辑:辛荷
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
   </p>
   <p>
    本文短网址:
-   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb3qNc"/>
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40au"/>
    转载请注明出处，
    <span style="color:red">
     严禁建立镜像网站
@@ -322,13 +329,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/916336.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955600.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955600.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955600.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/12/955600.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/916336.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/955600.md' width='0px' height='0px'/>
