--- a/pages/nsc412/n12615033.md
+++ b/pages/nsc412/n12615033.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.12】川普空中俯视华府集会" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/469618-600x400.jpg"/>
+<div><img alt="【大选更新12.12】川普空中俯视华府集会" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230084383-600x400.jpg"/>
 <div class="caption">
- 12月12日，川普支持者将在华盛顿特区举行“停止窃选”集会。图为11月14日，川普支持者在华盛顿举行的“停止窃选”活动。(OLIVIER DOULIERY/AFP via Getty Images)
+ 川普总统支持者12月12日在华盛顿特区举行“停止窃选”集会。川普总统乘坐直升机在空中俯视集会。(Photo by OLIVIER
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
